# MarinKino

./: .copilotignore  .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Caddyfile  Dockerfile  LICENSE  README.md  TODO.md  app.py  docker-compose.yml  duckdns_refresh.sh  installation.md  main.py  peskovnik.py  pyproject.toml  pytest.ini  refresh_duck_dns.bat  requirements.txt  start_server.bat  start_server.sh  user-interface.html
app/: app.py  main.py  manual_editor.py  prepare_movies.py  utils.py
app/blueprints/: __init__.py  admin_bp.py  auth_bp.py  misc_bp.py  movies_bp.py
app/movies_preparation/: config.py  the_chosen_scrapper.py
app/priprava_filmov/: config.py  main.py  sloflix_downloader.py  the_chosen_scrapper.py  translate_subtitles.py
app/static/pod_krinko_favicon_io/: site.webmanifest
app/templates/: forgot_password.html  login.html  mail_reset_password.html  pod_krinko.html
app/templates/partials/: header.html
configuration/: marinkino.service
configuration/fail2ban/: jail.local
configuration/fail2ban/filter.d/filter.d/: marinkono-auth.conf  nginx-404.conf
configuration/nginx/: default.conf
credentials/: README.md  gen-lang-client.json.example
data/: blog_posts.json  pod_krinko_besede.csv.example
data/memes/: README.md
data/movies/: README.md
data/music/: README.md
docs/: TODO.md  adding_data.md  installation.md  pytest.md
memes/: README.md
movies/: README.md
movies/06-the-chosen/seasons-metadata/: 1.html  2.html  3.html  4.html  5.html
music/: README.md
priprava_filmov/: config.py  download_subtitles.py  get_movie_metadata.py  helpers.py  prepare_user_interface.py  rescale_captions.py  sloflix_downloader.py  the_chosen_scrapper.py  translate_subtitles.py  video_converter.py
priprava_filmov/realesrgan/: __init__.py  basicsr.py  inference_realesrgan.py  utils.py
rclone/: rclone-bisync-gdrive.sh  rclone-sync-gdrive.sh
scripts/: docker-setup.sh  duckdns_refresh.sh  run_tests.sh  setup.sh  start_server.sh
scripts/rclone/: rclone-ignore.txt  rclone-sync-gdrive.sh
src/: app.py  manual_editor.py  prepare_movies.py  utils.py
src/blueprints/: __init__.py  admin_bp.py  auth_bp.py  blog_bp.py  memes_bp.py  misc_bp.py  movies_bp.py  music_bp.py  seo_bp.py
src/movies_preparation/: __init__.py  config.py  download_subtitles.py  get_movie_metadata.py  helpers.py  main.py  rescale_captions.py  sloflix_downloader.py  the_chosen_scrapper.py  translate_subtitles.py  video_converter.py
src/movies_preparation/subtitles/: __init__.py  download_subtitles.py  rescale_captions.py  translate_subtitles.py
src/static/blog_favicon_io/: site.webmanifest
src/static/css/: main_style.css  memes.css  music.css  pod_krinko.css  style.css
src/static/favicon_io/: site.webmanifest
src/static/pod_krinko_favicon_io/: site.webmanifest
src/static/script/: memes.js  movies.js  music_player.js  pod_krinko.js
src/templates/: admin.html  admin_blog.html  admin_blog_edit.html  admin_mailing.html  base.html  blog_list.html  blog_post.html  forgot_password.html  index.html  limit_exceeded.html  login.html  mail_blog_post.html  mail_newuser.html  mail_reset_password.html  mail_user_intro.html  memes.html  movies.html  music_editor.html  music_player.html  player.html  pod_krinko.html  radio_stories.html  register.html  reset_password.html  suggestions.html  test.html  video_editor.html
src/templates/mail_newsletters/: mail_monthly_recommendation.html  past_monthly_recommendations.md
src/templates/partials/: footer.html  header.html  navbar.html
static/: script.js
static/css/: memes.css  music.css  pod_krinko.css  style.css
static/favicon_io/: site.webmanifest
static/script/: memes.js  movie_player.js  movies.js  music_player.js  pod_krinko.js  pod_krinko_besede.js
templates/: admin.html  admin_mailing.html  base.html  forgot_password.html  index.html  limit_exceeded.html  login.html  mail_base.html  mail_newuser.html  mail_reset_password.html  mail_user_intro.html  memes.html  music_player.html  player.html  pod_krinko.html  register.html  reset_password.html  test.html  user-interface-template.html
templates/mail_newsletters/: 2026_januar.html
templates/partials/: footer.html  header.html  navbar.html
tests/: conftest.py  test_admin_bp.py  test_auth_bp.py  test_memes_bp.py  test_misc_bp.py  test_movies_bp.py  test_music_bp.py
