[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marinkino"
version = "1.1.0"
description = "Family entertainment library web app"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "huggingface-hub",
  "python-dotenv",
  "Flask",
  "flask-login",
  "requests",
  "beautifulsoup4",
  "cinemagoer",
  "google-cloud",
  "pysrt",
  "scipy",
  "pandas",
  "numpy",
  "numba",
  "torch",
  "torchaudio",
  "matplotlib",
  "gemini-srt-translator",
  "google-cloud-translate",
  "chardet",
  "langdetect",
  "waitress",
  "tqdm",
  "m3u8",
  "playwright",
  "pyautogui",
  "flask-compress",
  "certbot",
  "Flask-WTF",
  "Flask-Limiter",
  "opensubtitlescom",
  "mutagen",
  "redis"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
]
