[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marinkino"
version = "1.1.0"
description = "Family entertainment library web app"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "huggingface-hub",
  "python-dotenv",
  "Flask",
  "flask-login",
  "requests",
  "beautifulsoup4",
  "cinemagoer",
  "google-cloud",
  "pysrt",
  "scipy",
  "pandas",
  "numpy",
  "numba",
  "torch",
  "torchaudio",
  "matplotlib",
  "gemini-srt-translator==3.5.9",
  "google-cloud-translate",
  "chardet",
  "langdetect",
  "waitress",
  "tqdm",
  "m3u8",
  "playwright",
  "pyautogui",
  "flask-compress",
  "certbot",
  "Flask-WTF",
  "Flask-Limiter",
  "opensubtitlescom",
  "mutagen",
  "redis",
  "yt-dlp",
  "markdown",
  "pre-commit",
  "ruff",
  "isort",
  "basedpyright",
]

[tool.ruff]
line-length = 79
target-version = "py312"
exclude = ["cache", ".venv", "build", "dist", "__pycache__", ".git"]

[tool.isort]
profile = "black"
line_length = 79
src_paths = ["src"]

[tool.ruff.lint]
select = [
    "A",    # warn about shadowing built-ins
    "E",    # style stuff, whitespaces
    "F",    # important pyflakes lints
    "I",    # import sorting
    "N",    # naming
    "T100"
]

[tool.ruff.lint.isort]
known-first-party = ["blueprints", "movies_preparation"]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
exclude = [
    "**/__pycache__",
    "**/site-packages",
    "**/node_modules",
    "**/cdk.out",
    "**/.venv",
    "**/.ruff_cache",
    "**/.pytest_cache",
    "**/.gitlab",
    "**/local_testing",
    "**/.vscode",
    "cache",
    ".venv",
    "build",
    "dist",
    "__pycache__"
]
pythonVersion = "3.12"
failOnWarnings = false
include = ["src"]
typeCheckingMode = "basic"
reportPrivateImportUsage = "warning"
reportMissingImports = "warning"
reportOptionalMemberAccess = "warning"
reportOptionalSubscript = "warning"
reportOptionalOperand = "warning"
reportOptionalIterable = "warning"
reportMissingTypeArgument = "warning"
reportOperatorIssue = "warning"
reportArgumentType = "warning"
reportAssignmentType = "warning"
reportAttributeAccessIssue = "warning"
reportCallIssue = "warning"
reportReturnType = "warning"
reportIndexIssue = "warning"
reportGeneralTypeIssues = "warning"
reportIncompatibleMethodOverride = "warning"
reportUnknownParameterType = "warning"
reportUnusedCallResult = false
